; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/i40iw/extr_i40iw_hw.c_i40iw_set_flush_info.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/i40iw/extr_i40iw_hw.c_i40iw_set_flush_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40iw_qp_flush_info = type { i32 }

@CQE_MAJOR_DRV = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i40iw_qp_flush_info*, i64*, i64*, i32)* @i40iw_set_flush_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i40iw_set_flush_info(%struct.i40iw_qp_flush_info* %0, i64* %1, i64* %2, i32 %3) #0 {
  %5 = alloca %struct.i40iw_qp_flush_info*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  store %struct.i40iw_qp_flush_info* %0, %struct.i40iw_qp_flush_info** %5, align 8
  store i64* %1, i64** %6, align 8
  store i64* %2, i64** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @i40iw_get_ib_wc(i32 %9)
  %11 = load i64*, i64** %6, align 8
  store i64 %10, i64* %11, align 8
  %12 = load i64, i64* @CQE_MAJOR_DRV, align 8
  %13 = load i64*, i64** %7, align 8
  store i64 %12, i64* %13, align 8
  %14 = load %struct.i40iw_qp_flush_info*, %struct.i40iw_qp_flush_info** %5, align 8
  %15 = getelementptr inbounds %struct.i40iw_qp_flush_info, %struct.i40iw_qp_flush_info* %14, i32 0, i32 0
  store i32 1, i32* %15, align 4
  ret void
}

declare dso_local i64 @i40iw_get_ib_wc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
